Comment Model and Controller
